--- a/package.json
+++ b/package.json
@@ -6,12 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preview-email": "email dev"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.515.0",
+    "@heroicons/react": "^2.1.1",
+    "@react-email/components": "^0.0.14",
+    "@react-email/container": "0.0.11",
+    "@react-email/font": "^0.0.5",
+    "@react-email/html": "0.0.7",
+    "@react-email/render": "^0.0.12",
+    "@react-email/section": "0.0.11",
+    "@react-email/text": "0.0.7",
+    "aws-sdk": "^2.1560.0",
+    "clsx": "^2.1.0",
+    "next": "14.1.0",
+    "nodemailer": "^6.9.9",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-email": "2.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
