--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,4 @@ BASIC_AUTH_USR=
 BASIC_AUTH_PWD=
 
 # Link to the github project
-GITHUB_URL=
+GITHUB_URL=https://github.com/schminkel/nextjs-email-forms
